# Lab8_homework

./: CMakeLists.txt  ChangeLog.md  Dockerfile
.github/workflows/: github-actions.yml  tag.yml
logs/: log.txt
